# gpupixel-android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/gpupixel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/gpupixel/: Camera2Helper.java  MainActivity.kt  MyRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/gpupixel/: ExampleUnitTest.kt
gpupixel/: build.gradle.kts
gpupixel/src/androidTest/java/com/gpupixel/: ExampleInstrumentedTest.kt
gpupixel/src/main/cpp/: CMakeLists.txt  jni_face_detector.cc  jni_filter.cc  jni_gpupixel.cc  jni_helpers.cc  jni_sink_raw_data.cc  jni_source_image.cc  jni_source_raw_data.cc
gpupixel/src/main/cpp/core/: gpupixel_context.cc  gpupixel_context.h  gpupixel_framebuffer.cc  gpupixel_framebuffer.h  gpupixel_framebuffer_factory.cc  gpupixel_framebuffer_factory.h  gpupixel_gl_include.h  gpupixel_program.cc  gpupixel_program.h
gpupixel/src/main/cpp/face_detector/: face_detector.cc
gpupixel/src/main/cpp/filter/: beauty_face_filter.cc  beauty_face_unit_filter.cc  bilateral_filter.cc  blusher_filter.cc  box_blur_filter.cc  box_difference_filter.cc  box_high_pass_filter.cc  box_mono_blur_filter.cc  brightness_filter.cc  canny_edge_detection_filter.cc  color_invert_filter.cc  color_matrix_filter.cc  contrast_filter.cc  convolution3x3_filter.cc  crosshatch_filter.cc  directional_non_maximum_suppression_filter.cc  directional_sobel_edge_detection_filter.cc  emboss_filter.cc  exposure_filter.cc  face_makeup_filter.cc  face_reshape_filter.cc  filter.cc  filter_group.cc  gaussian_blur_filter.cc  gaussian_blur_mono_filter.cc  glass_sphere_filter.cc  grayscale_filter.cc  halftone_filter.cc  hsb_filter.cc  hue_filter.cc  ios_blur_filter.cc  lipstick_filter.cc  luminance_range_filter.cc  nearby_sampling3x3_filter.cc  non_maximum_suppression_filter.cc  pixellation_filter.cc  posterize_filter.cc  rgb_filter.cc  saturation_filter.cc  single_component_gaussian_blur_filter.cc  (+8 more)
gpupixel/src/main/cpp/include/gpupixel/: gpupixel.h  gpupixel_define.h
gpupixel/src/main/cpp/include/gpupixel/filter/: beauty_face_filter.h  beauty_face_unit_filter.h  bilateral_filter.h  blusher_filter.h  box_blur_filter.h  box_difference_filter.h  box_high_pass_filter.h  box_mono_blur_filter.h  brightness_filter.h  canny_edge_detection_filter.h  color_invert_filter.h  color_matrix_filter.h  contrast_filter.h  convolution3x3_filter.h  crosshatch_filter.h  directional_non_maximum_suppression_filter.h  directional_sobel_edge_detection_filter.h  emboss_filter.h  exposure_filter.h  face_makeup_filter.h
gpupixel/src/main/cpp/sink/: objc_view.h  objc_view.mm  sink.cc  sink_render.cc  sink_view.cc
gpupixel/src/main/cpp/source/: source.cc  source_image.cc  source_raw_data.cc
gpupixel/src/main/cpp/utils/: math_toolbox.cc  util.cc  util.h
gpupixel/src/main/java/com/pixpark/gpupixel/: GPUPixel.java  GPUPixelFilter.java  GPUPixelSink.java  GPUPixelSinkRawData.java  GPUPixelSource.java  GPUPixelSourceImage.java  GPUPixelSourceRawData.java
gpupixel/src/test/java/com/gpupixel/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
